--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: pixelate;
-  src: url("pixelate.TTF");
+  src: url("../assets/pixelate.TTF");
 }
 
 body {
@@ -12,6 +12,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.spacer {
+  height: 20px;
 }
 
 #instructions {
